# nwn-cpp-scripting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Code/: CMakeLists.txt
Code/Example/: CMakeLists.txt  EntryPoint.cpp
Code/Example/Game/: Example.cpp  Example.hpp
Code/Example/Game/Scripts/Module/: Heartbeat.cpp
Code/Example/Game/Scripts/Placeable/CombatDummy/: Damaged.cpp
Code/Example/Game/Systems/: Combat.cpp  Combat.hpp  Scripting.cpp  Scripting.hpp
Code/Example/NWN/: Addresses.cpp  Addresses.hpp  Constants.hpp  Functions.cpp  Functions.hpp  Structs.cpp  Structs.hpp
Code/Example/NWN/Scripts/: NWScript.cpp  NWScript.hpp  NWScriptVM.cpp  NWScriptVM.hpp
Code/Example/Platform/: ASLR.cpp  ASLR.hpp  Assembly.cpp  Assembly.hpp  Assembly.inl  Hook.hpp
Code/Example/Util/: Assert.cpp  Assert.hpp
Code/Loader/: CMakeLists.txt  Loader.cpp  Loader.hpp  Main.cpp
